ignore and untrack binary files

--- a/.gitignore
+++ b/.gitignore
@@ -392,3 +392,15 @@ _Pvt_Extensions
 /AgendaBeleza/AgendaBeleza/.vs/AgendaBeleza/v17/.suo
 /AgendaBeleza/AgendaBeleza/.vs/ProjectEvaluation/agendabeleza.metadata.v7.bin
 /AgendaBeleza/AgendaBeleza/.vs/ProjectEvaluation/agendabeleza.projects.v7.bin
+/AgendaBeleza/AgendaBeleza/AgendaBeleza/bin/Debug/net7.0/AgendaBeleza.dll
+/AgendaBeleza/AgendaBeleza/AgendaBeleza/bin/Debug/net7.0/AgendaBeleza.exe
+/AgendaBeleza/AgendaBeleza/AgendaBeleza/bin/Debug/net7.0/AgendaBeleza.pdb
+/AgendaBeleza/AgendaBeleza/AgendaBeleza/obj/Debug/net7.0/ref/AgendaBeleza.dll
+/AgendaBeleza/AgendaBeleza/AgendaBeleza/obj/Debug/net7.0/refint/AgendaBeleza.dll
+/AgendaBeleza/AgendaBeleza/AgendaBeleza/obj/Debug/net7.0/AgendaBeleza.AssemblyInfo.cs
+/AgendaBeleza/AgendaBeleza/AgendaBeleza/obj/Debug/net7.0/AgendaBeleza.AssemblyInfoInputs.cache
+/AgendaBeleza/AgendaBeleza/AgendaBeleza/obj/Debug/net7.0/AgendaBeleza.csproj.CoreCompileInputs.cache
+/AgendaBeleza/AgendaBeleza/AgendaBeleza/obj/Debug/net7.0/AgendaBeleza.csproj.FileListAbsolute.txt
+/AgendaBeleza/AgendaBeleza/AgendaBeleza/obj/Debug/net7.0/AgendaBeleza.dll
+/AgendaBeleza/AgendaBeleza/AgendaBeleza/obj/Debug/net7.0/AgendaBeleza.pdb
+/AgendaBeleza/AgendaBeleza/AgendaBeleza/obj/Debug/net7.0/apphost.exe
