métodos delete e update

--- a/PiticOrm/PiticoConsole.Tests/PiticoTest.Tests.csproj
+++ b/PiticOrm/PiticoConsole.Tests/PiticoTest.Tests.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\PiticoOrm\PiticoOrm.csproj" />
     <ProjectReference Include="..\PiticoConsole\PiticoConsole.csproj" />
   </ItemGroup>
 
