organização de arquivos

--- a/PiticOrm/PiticoConsole.Tests/PiticoTest.Tests.csproj
+++ b/PiticOrm/PiticoConsole.Tests/PiticoTest.Tests.csproj
@@ -17,8 +17,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\PiticoOrm\PiticoOrm.csproj" />
     <ProjectReference Include="..\PiticoConsole\PiticoConsole.csproj" />
+    <ProjectReference Include="..\PiticoOrm\PiticoOrm.csproj" />
   </ItemGroup>
 
 </Project>
