--- a/PiticOrm/PiticoConsole/PiticoConsole.csproj
+++ b/PiticOrm/PiticoConsole/PiticoConsole.csproj
@@ -7,7 +7,7 @@
 
 
   <ItemGroup>
-    <ProjectReference Include="..\..\PiticoOrm\PiticoOrm.csproj" />
+    <ProjectReference Include="..\PiticoOrm\PiticoOrm.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
